@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.14
 Date: ????
-  Changes:
+  Bugfixes:
+    - Actually support fluid filters on fluid mining drills. Fixed bad commit.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.13
 Date: 2025-03-31
